# audiblez

./: README.md  pyproject.toml  test_engine_availability.py
UI.app/Contents/: Info.plist  document.wflow
UI.app/Contents/MacOS/: Automator Application Stub
UI.app/Contents/_CodeSignature/: CodeResources
audiblez/: cli.py  core.py  settings.py  ui.py
eBooks/: cover
